--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="map-wrapper" id="mapWrapper">
       <!-- Your original iframe (kept as provided) -->
       <iframe
-        src="https://www.google.com/maps/d/u/0/embed?mid=1E7m-MbBH0bVgQu-THnFmkfbzEgDITug&ehbc=2E312F&noprof=1"
+        src="https://www.google.com/maps/d/u/0/embed?mid=1E7m-MbBH0bVgQu-THnFmkfbzEgDITug&ehbc=2E312F&noprof=1&hl=en"
         title="Custom Google My Maps"
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
