--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     /* Controls row */
     .controls{ display:flex; gap:.5rem; margin-top:.75rem; }
     .btn{ background:#1f6feb; color:#fff; border:none; padding:.5rem .75rem; border-radius:8px; cursor:pointer; font-weight:600; }
-    .btn.secondary{ background:#6b7280; }
+    .btn.secondary{ background:#6b7280; text-decoration:none; display:inline-block; }
+
     .note{ font-size:0.85rem; color:#444; margin-top:.5rem }
 
     @media (max-width:480px){ h1{ font-size:1rem } }
@@ -32,7 +33,7 @@
     <p class="lead">This page displays the OOH asset locations along with their details and photos. Use the <strong>Full screen</strong> button to expand the map.</p>
 
     <div class="map-wrapper" id="mapWrapper">
-      <!-- Your original iframe (kept as provided) -->
+      <!-- Google My Maps iframe with forced English -->
       <iframe
         src="https://www.google.com/maps/d/u/0/embed?mid=1E7m-MbBH0bVgQu-THnFmkfbzEgDITug&ehbc=2E312F&noprof=1&hl=en"
         title="Custom Google My Maps"
@@ -45,35 +46,12 @@
 
     <div class="controls">
       <button class="btn" id="fsBtn">Full screen</button>
-      <a class="btn secondary" href="https://www.google.com/maps/d/u/0/viewer?mid=1E7m-MbBH0bVgQu-THnFmkfbzEgDITug" target="_blank" rel="noopener noreferrer">Open in Google Maps</a>
+      <a class="btn secondary" href="https://www.google.com/maps/d/u/0/viewer?mid=1E7m-MbBH0bVgQu-THnFmkfbzEgDITug&hl=en" target="_blank" rel="noopener noreferrer">Open in Google Maps</a>
     </div>
 
-    <div class="note"> These asset locations have been pinned and verified by the OOH Asset Supervisor.</div>
+    <div class="note">These asset locations have been pinned and verified by the OOH Asset Supervisor.</div>
   </div>
 
   <script>
     // Simple fullscreen toggle for the map wrapper
-    const fsBtn = document.getElementById('fsBtn');
-    const wrapper = document.getElementById('mapWrapper');
-
-    fsBtn.addEventListener('click', async () => {
-      try {
-        if (!document.fullscreenElement) {
-          await wrapper.requestFullscreen();
-          fsBtn.textContent = 'Exit full screen';
-        } else {
-          await document.exitFullscreen();
-          fsBtn.textContent = 'Full screen';
-        }
-      } catch (err) {
-        console.warn('Fullscreen API failed:', err);
-      }
-    });
-
-    // Ensure button label updates if user exits fullscreen with Esc
-    document.addEventListener('fullscreenchange', () => {
-      fsBtn.textContent = document.fullscreenElement ? 'Exit full screen' : 'Full screen';
-    });
-  </script>
-</body>
-</html>
+    const fsBtn = document.getElementById
